==================

Version 0.13
------------

yet to be released

- Raise `TypeError` when port is not an integer.
- Fully deprecate `werkzeug.script`. Use `click`
  (http://click.pocoo.org) instead.
- ``response.age`` is parsed as a ``timedelta``. Previously, it was incorrectly
  treated as a ``datetime``. The header value is an integer number of seconds,
  not a date string. (``#414``)

Version 0.12.1
--------------

Released on March 15th 2017

- Fix crash of reloader (used on debug mode) on Windows.
  (`OSError: [WinError 10038]`). See pull request ``#1081``
- Partially revert change to class hierarchy of `Headers`. See ``#1084``.

Version 0.12
------------

Released on March 10th 2017

- Spit out big deprecation warnings for werkzeug.script
- Use `inspect.getfullargspec` internally when available as
  `inspect.getargspec` is gone in 3.6
- Added support for status code 451 and 423
- Improved the build error suggestions.  In particular only if
  someone stringifies the error will the suggestions be calculated.
- Added support for uWSGI's caching backend.
- Fix a bug where iterating over a `FileStorage` would result in an infinite
  loop.
- Datastructures now inherit from the relevant baseclasses from the
  `collections` module in the stdlib. See #794.
- Add support for recognizing NetBSD, OpenBSD, FreeBSD, DragonFlyBSD platforms
  in the user agent string.
- Recognize SeaMonkey browser name and version correctly
- Recognize Baiduspider, and bingbot user agents
- If `LocalProxy`'s wrapped object is a function, refer to it with __wrapped__
  attribute.
- The defaults of ``generate_password_hash`` have been changed to more secure
  ones, see pull request ``#753``.
- Add support for encoding in options header parsing, see pull request
  ``#933``.
- ``test.Client`` now properly handles Location headers with relative URLs, see
  pull request ``#879``.
- When `HTTPException` is raised, it now prints the description, for easier
  debugging.